Fixed 1px styling bug in chrome when nav is open on small screens

--- a/client/css/newgrid/modules/circles.styl
+++ b/client/css/newgrid/modules/circles.styl
@@ -160,6 +160,7 @@ if responsive
         > *
           margin-left 0 
           margin-top 0
+          margin-bottom -1px
 
     // Active border
     .circles.active
